# Sphinx_Doxygen_Dokumentation

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  conf.py  index.rst
src/: CMakeLists.txt  beispiel.cpp  beispiel.h
